force-app/main/default/objects/CSBD_Gestor_Oportunidad__c/CSBD_Gestor_Oportunidad__c.object-meta.xml
<CustomObject>
    <label>Gestor Oportunidad</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre Gestor Oportunidad</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gestores Oportunidad</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>