force-app/main/default/objects/CSBD_Gestor_Oportunidad__c/fields/CSBD_Empresa_proveedora__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Empresa_proveedora__c</fullName>
    <label>Empresa proveedora</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CaixaBank</fullName>
            </value>
            <value>
                <fullName>imaginBank</fullName>
            </value>
            <value>
                <fullName>inTouch</fullName>
            </value>
            <value>
                <fullName>Now In Empleado</fullName>
            </value>
            <value>
                <fullName>Now In Soporte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>