force-app/main/default/objects/CSBD_Gestor_Oportunidad__c/fields/CSBD_Estado__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Fuera horario comercial</fullName>
            </value>
            <value>
                <fullName>Fuera horario contacto</fullName>
            </value>
            <value>
                <fullName>Pendiente de asignar</fullName>
            </value>
            <value>
                <fullName>Inactivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>