force-app/main/default/objects/CSBD_Gestor_Oportunidad__c/fields/CSBD_Familia_de_producto__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Familia_de_producto__c</fullName>
    <label>Familia de producto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ahorro</fullName>
            </value>
            <value>
                <fullName>Alta Cliente</fullName>
            </value>
            <value>
                <fullName>Alta Cliente Digital</fullName>
            </value>
            <value>
                <fullName>Alta Cuenta</fullName>
            </value>
            <value>
                <fullName>Alta Cuenta Multi Titular</fullName>
            </value>
            <value>
                <fullName>Back Office</fullName>
            </value>
            <value>
                <fullName>Convenio CA Andalucia</fullName>
            </value>
            <value>
                <fullName>Convenio CA Extremadura</fullName>
            </value>
            <value>
                <fullName>Convenio CA Madrid</fullName>
            </value>
            <value>
                <fullName>Convenio Castilla y Leon</fullName>
            </value>
            <value>
                <fullName>Convenio CA Valencia</fullName>
            </value>
            <value>
                <fullName>Convenio Ibavi</fullName>
            </value>
            <value>
                <fullName>Cuenta</fullName>
            </value>
            <value>
                <fullName>Cuentas</fullName>
            </value>
            <value>
                <fullName>Depósitos</fullName>
            </value>
            <value>
                <fullName>Depósitos Bonificados</fullName>
            </value>
            <value>
                <fullName>Domiciliaciones</fullName>
            </value>
            <value>
                <fullName>Domiciliaciones Colectivos</fullName>
            </value>
            <value>
                <fullName>Fondos</fullName>
            </value>
            <value>
                <fullName>Fondos de inversión</fullName>
            </value>
            <value>
                <fullName>Genérico 1</fullName>
            </value>
            <value>
                <fullName>Genérico 10</fullName>
            </value>
            <value>
                <fullName>Genérico 2</fullName>
            </value>
            <value>
                <fullName>Genérico 3</fullName>
            </value>
            <value>
                <fullName>Genérico 4</fullName>
            </value>
            <value>
                <fullName>Genérico 5</fullName>
            </value>
            <value>
                <fullName>Genérico 6</fullName>
            </value>
            <value>
                <fullName>Genérico 7</fullName>
            </value>
            <value>
                <fullName>Genérico 8</fullName>
            </value>
            <value>
                <fullName>Genérico 9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>