force-app/main/default/objects/CSBD_Gestor_Oportunidad__c/fields/CSBD_Hora_inicio_contacto__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Hora_inicio_contacto__c</fullName>
    <label>Hora inicio contacto</label>
    <type>Time</type>
</CustomField>