force-app/main/default/objects/CSBD_Gestor_Oportunidad__c/fields/CSBD_OC_Canal_Entrada__c.field-meta.xml
<CustomField>
    <fullName>CSBD_OC_Canal_Entrada__c</fullName>
    <label>Solicitud de entrada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formularios</fullName>
            </value>
            <value>
                <fullName>Internacional</fullName>
            </value>
            <value>
                <fullName>Plataformas Hipotecarias</fullName>
            </value>
            <value>
                <fullName>Web/App</fullName>
            </value>
            <value>
                <fullName>Omniexperiencia</fullName>
            </value>
            <value>
                <fullName>Otros1</fullName>
            </value>
            <value>
                <fullName>Otros2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>