force-app/main/default/objects/CSBD_Gestor_Oportunidad__c/fields/CSBD_OC_Prioridad__c.field-meta.xml
<CustomField>
    <fullName>CSBD_OC_Prioridad__c</fullName>
    <description>Prioridad</description>
    <label>Prioridad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>0-4</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>5-7</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>+8</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>