force-app/main/default/objects/CSBD_Gestor_Oportunidad__c/fields/CSBD_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Gestores Oportunidad</relationshipLabel>
    <relationshipName>Gestores_de_oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>