force-app/main/default/objects/CSBD_Gestor_Oportunidad__c/fields/CSBD_Oportunidad_alta_omnichannel__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Oportunidad_alta_omnichannel__c</fullName>
    <formula>CSBD_Oportunidad__r.CSBD_Alta_omnichannel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oportunidad alta omnichannel</label>
    <type>Checkbox</type>
</CustomField>