force-app/main/default/objects/CSBD_Gestor_Oportunidad__c/fields/CSBD_Propietario_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Propietario_oportunidad__c</fullName>
    <formula>CSBD_Oportunidad__r.Owner.FirstName  &amp; &quot; &quot; &amp;  CSBD_Oportunidad__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Propietario oportunidad</label>
    <type>Text</type>
</CustomField>