force-app/main/default/objects/CSBD_Gestor_Oportunidad__c/fields/CSBD_Tipo_de_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Tipo_de_oportunidad__c</fullName>
    <label>Tipo de oportunidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acción comercial</fullName>
            </value>
            <value>
                <fullName>CMB</fullName>
            </value>
            <value>
                <fullName>CMN</fullName>
            </value>
            <value>
                <fullName>Wivai</fullName>
            </value>
            <value>
                <fullName>Desistimiento</fullName>
            </value>
            <value>
                <fullName>Desistimiento PAI</fullName>
            </value>
            <value>
                <fullName>Hipoteca</fullName>
            </value>
            <value>
                <fullName>Préstamo</fullName>
            </value>
            <value>
                <fullName>Renting</fullName>
            </value>
            <value>
                <fullName>TPV</fullName>
            </value>
            <value>
                <fullName>PRO Automática</fullName>
            </value>
            <value>
                <fullName>Soporte digital</fullName>
            </value>
            <value>
                <fullName>MAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>