force-app/main/default/objects/CSBD_Gestor_Oportunidad__c/fields/CSBD_Turno_de_contacto__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Turno_de_contacto__c</fullName>
    <label>Turno de contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mañana</fullName>
            </value>
            <value>
                <fullName>Tarde</fullName>
            </value>
            <value>
                <fullName>Cualquier hora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>