force-app/main/default/objects/CSBD_Gestor_Oportunidad__c/listViews/CSBD_AC_Centralita_CSBD_Gestor_Oportunidad.listView-meta.xml
<ListView>
    <fullName>CSBD_AC_Centralita_CSBD_Gestor_Oportunidad</fullName>
    <filterScope>Queue</filterScope>
    <label>CSBD - CSCC Centralita</label>
    <queue>CSBD_CSCC_Centralita</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>