force-app/main/default/objects/CSBD_Gestor_Oportunidad__c/listViews/CSBD_Asistencia_Comercial_CSBD_Gestor_Oportunidad.listView-meta.xml
<ListView>
    <fullName>CSBD_Asistencia_Comercial_CSBD_Gestor_Oportunidad</fullName>
    <filterScope>Queue</filterScope>
    <label>CSBD -  CSCC</label>
    <queue>CSBD_CSCC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>