force-app/main/default/objects/CSBD_Gestor_Oportunidad__c/listViews/CSBD_CMB_CSBD_Gestor_Oportunidad.listView-meta.xml
<ListView>
    <fullName>CSBD_CMB_CSBD_Gestor_Oportunidad</fullName>
    <filterScope>Queue</filterScope>
    <label>CSBD - CMB</label>
    <queue>CSBD_CMB</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>