force-app/main/default/objects/CSBD_Gestor_Oportunidad__c/listViews/CSBD_CMN_CMB_Intouch_CSBD_Gestor_Oportunidad.listView-meta.xml
<ListView>
    <fullName>CSBD_CMN_CMB_Intouch_CSBD_Gestor_Oportunidad</fullName>
    <filterScope>Queue</filterScope>
    <label>CSBD - Call me Intouch</label>
    <queue>CSBD_CMN_CMB_Intouch</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>