force-app/main/default/objects/CSBD_Gestor_Oportunidad__c/listViews/CSBD_Gestores_Op_Fuera_horario_contacto.listView-meta.xml
<ListView>
    <fullName>CSBD_Gestores_Op_Fuera_horario_contacto</fullName>
    <columns>NAME</columns>
    <columns>CSBD_Oportunidad__c</columns>
    <columns>CSBD_Estado__c</columns>
    <columns>CSBD_Tipo_de_oportunidad__c</columns>
    <columns>CSBD_Turno_de_contacto__c</columns>
    <columns>CSBD_Hora_inicio_contacto__c</columns>
    <columns>CSBD_Hora_fin_contacto__c</columns>
    <columns>CSBD_Idioma__c</columns>
    <columns>CSBD_Familia_de_producto__c</columns>
    <columns>CSBD_Empresa_proveedora__c</columns>
    <columns>CSBD_Cola_Asignada__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CSBD_Estado__c</field>
        <operation>equals</operation>
        <value>Fuera horario contacto</value>
    </filters>
    <label>Gestores Op. Fuera horario contacto</label>
</ListView>