force-app/main/default/objects/CSBD_Gestor_Oportunidad__c/listViews/CSBD_Hipotecas_CSBD_Gestor_Oportunidad.listView-meta.xml
<ListView>
    <fullName>CSBD_Hipotecas_CSBD_Gestor_Oportunidad</fullName>
    <filterScope>Queue</filterScope>
    <label>CSBD - Hipotecas</label>
    <queue>CSBD_Hipotecas</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>