force-app/main/default/objects/CSBD_Gestor_Oportunidad__c/listViews/CSBD_Otras_oportunidades_CSBD_Gestor_Oportunidad.listView-meta.xml
<ListView>
    <fullName>CSBD_Otras_oportunidades_CSBD_Gestor_Oportunidad</fullName>
    <filterScope>Queue</filterScope>
    <label>CSBD - Otras oportunidades</label>
    <queue>CSBD_Otras_oportunidades</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>