force-app/main/default/objects/CSBD_Gestor_Oportunidad__c/listViews/CSBD_Prestamos_I_CSBD_Gestor_Oportunidad.listView-meta.xml
<ListView>
    <fullName>CSBD_Prestamos_I_CSBD_Gestor_Oportunidad</fullName>
    <filterScope>Queue</filterScope>
    <label>CSBD - Consumo I</label>
    <queue>CSBD_Prestamos_I</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>