force-app/main/default/objects/CSBD_Gestor_Oportunidad__c/listViews/CSBD_Prestamos_II_CSBD_Gestor_Oportunidad.listView-meta.xml
<ListView>
    <fullName>CSBD_Prestamos_II_CSBD_Gestor_Oportunidad</fullName>
    <filterScope>Queue</filterScope>
    <label>CSBD - Préstamos II</label>
    <queue>CSBD_Prestamos_II</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>